--- a/index.html
+++ b/index.html
@@ -1,15 +1,28 @@
 <!-- TODO 1: Create the HTML Boilerplate -->
+<!DOCTYPE html>
+<html lang="Es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>El Portafolio de Mayko</title>
+</head>
+<body>
+    <h1>El Portafolio de Mayko</h1>
+    <h2>Soy un Disenador web</h2>
+    <hr/>
+    <a href="./public/Ranking de peliculas.html">Ranking de peliculas</a>
+    <img src="./assets/images/lista de mejores peliculas.png" alt="vista previa" height="250">
 
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
+    <a href="./public/Mi cumpleanos.html">invitacion de cumpleanos</a>
+    <p></p>
+    <img src="./assets/images/invitacion cumpleanos.png" alt="invitacion cumpleanos"height="250">
+    <hr/>
+    <a href="./public/contactame.html">Mas Informacion</a>
+</body>
+</html>
 
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
 
 <!-- TODO 6: Add images to show the project previews
 HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
 https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 
-<!-- TODO 7: Add the Contact Me and About Me page links -->
