--- a/index.html
+++ b/index.html
@@ -10,19 +10,11 @@
     <h1>El Portafolio de Mayko</h1>
     <h2>Soy un Disenador web</h2>
     <hr/>
-    <a href="./public/Ranking de peliculas.html">Ranking de peliculas</a>
+    <h3><a href="./public/Ranking de peliculas.html">Ranking de peliculas</a></h3>
     <img src="./assets/images/lista de mejores peliculas.png" alt="vista previa" height="250">
-
-    <a href="./public/Mi cumpleanos.html">invitacion de cumpleanos</a>
-    <p></p>
+    <h3><a href="./public/Mi cumpleanos.html">invitacion de cumpleanos</a></h3>
     <img src="./assets/images/invitacion cumpleanos.png" alt="invitacion cumpleanos"height="250">
     <hr/>
     <a href="./public/contactame.html">Mas Informacion</a>
 </body>
 </html>
-
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
